# saddlesum

./: .gitignore  AUTHORS  COPYING  Makefile.in  README  configure  configure.ac
RSaddleSum/: DESCRIPTION  NAMESPACE  README
RSaddleSum/R/: RSaddleSum.R
RSaddleSum/src/: RSaddleSum.c
doc/: Makefile
doc/source/: additional.rst  conf.py  cytosaddlesum.rst  documentation.rst  overview.rst  saddlesum-cli.rst  saddlesum-show-etd.rst  standalone_version.rst  web_version.rst
examples/: GDS2338_GSM102668_all_geneid.tab  GDS2338_GSM102668_down_geneid.tab  GDS2338_GSM102668_up_geneid.tab  GDS2352_GSM89756_all_geneid.tab  GDS2352_GSM89756_down_geneid.tab  GDS2352_GSM89756_up_geneid.tab  GDS3184_GSM253560_all_geneid.tab  GDS3184_GSM253560_down_geneid.tab  GDS3184_GSM253560_up_geneid.tab  GO-bp-rno.gmt  GO-cc-hsa.gmt  KEGG-sce.gmt
include/: cvterm.h  enrich.h  entity.h  fsfile.h  hashtable_itr.h  help.h  hypergeom.h  mconf.h  miscutils.h  saddlesum.h  stack.h  termdb2entities.h
lib/: absprintf.c  cvterm.c  enrich.c  enrich_print.c  entity.c  etermdb.c  fileread.c  fsfile.c  gmtdb.c  hashfuncs.c  hypergeom.c  memalloc.c  ncbi_gene.c  saddlesum.c  stack.c  termdb2entities.c
man/: saddlesum-show-etd.1  saddlesum.1
progs/: saddlesum-show-etd.c  saddlesum_prog.c
swig/: Makefile.in  saddlesum.i
test_data/: testdb01.gmt  testdb02.gmt  testdb03_err.gmt  testdb04_err.gmt  testdb05_err.gmt  testdb06_err.gmt  weights01.tab  weights02_err.tab  weights03_err.tab  weights05.tab
utils/help/: layout.html  make_help.py
